# neozbx

./: CMakeLists.txt  LICENSE  README.md  linker.ld  qemu.sh  qemu_debug.sh
cross-gcc-env/: arch_install.sh  debian_install.sh  gentoo_install.sh  get_binutils.sh  get_gcc.sh
include/: bitwise.h  limits.h  types.h
include/CPU/: regs.h
include/CPU/Interrupts/: InterruptDescriptorTable.hpp  InterruptServiceRoutine.hpp
include/System/: Driver.hpp
include/System/InputOutput/: IODriver.hpp  SystemPort.hpp
include/System/InputOutput/Output/: Screen.hpp
include/System/Integrity/: Assertion.hpp  Panic.hpp
src/: gdt.s  kmain.cpp  loader.s
src/cpu/: idt.s
src/cpu/interrupts/: excep.s  handler.cpp  idt.cpp  idt.s  idt.s.junk
src/system/: assertion.cpp  iodriver.cpp  panic.cpp  port.cpp
src/vga/: vga.cpp
uml/: diagram
